@@ -1,5 +1,5 @@
 /*
- * Copyright © 2004-2023 L2J Server
+ * Copyright © 2004-2026 L2J Server
  * 
  * This file is part of L2J Server.
  * 
@@ -20,12 +20,11 @@ package com.l2jserver.gameserver.model.skills.targets;
 
 import static com.l2jserver.gameserver.model.zone.ZoneId.SIEGE;
 import static java.util.Comparator.comparingDouble;
+import static java.util.stream.Collectors.toList;
 
-import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.l2jserver.gameserver.GeoData;
 import com.l2jserver.gameserver.model.L2Object;
@@ -68,7 +67,7 @@ public enum AffectScope {
 			
 			final var affectLimit = skill.getAffectLimit();
 			final var affectObject = skill.getAffectObject();
-			final var targets = new ArrayList<L2Object>();
+			final var targets = new LinkedList<L2Object>();
 			final var inDuel = player.isInDuel();
 			for (var object : L2World.getInstance().getVisibleObjects(target, skill.getAffectRange())) {
 				if ((affectLimit > 0) && (targets.size() >= affectLimit)) {
@@ -139,8 +138,8 @@ public enum AffectScope {
 			final var player = target.getActingPlayer();
 			final var affectLimit = skill.getAffectLimit();
 			final var affectObject = skill.getAffectObject();
-			final var targets = new ArrayList<L2Object>();
-			for (L2Object object : L2World.getInstance().getVisibleObjects(target, skill.getAffectRange())) {
+			final var targets = new LinkedList<L2Object>();
+			for (var object : L2World.getInstance().getVisibleObjects(target, skill.getAffectRange())) {
 				if ((affectLimit > 0) && (targets.size() >= affectLimit)) {
 					break;
 				}
@@ -178,7 +177,7 @@ public enum AffectScope {
 			final var fanRadius = fanRange[2];
 			final var fanAngle = fanRange[3];
 			final var affectObject = skill.getAffectObject();
-			final var targets = new ArrayList<L2Object>();
+			final var targets = new LinkedList<L2Object>();
 			for (var object : L2World.getInstance().getVisibleObjects(caster, fanRadius)) {
 				if ((affectLimit > 0) && (targets.size() >= affectLimit)) {
 					break;
@@ -227,7 +226,7 @@ public enum AffectScope {
 			
 			final var affectLimit = skill.getAffectLimit();
 			final var affectRange = skill.getAffectRange();
-			final var targets = new ArrayList<L2Object>();
+			final var targets = new LinkedList<L2Object>();
 			final var creature = (L2Character) target;
 			if (creature.isInParty()) {
 				for (var partyMember : creature.getParty().getMembers()) {
@@ -279,7 +278,7 @@ public enum AffectScope {
 		public List<L2Object> affectTargets(L2Character caster, L2Object target, Skill skill) {
 			final var affectRange = skill.getAffectRange();
 			final var affectLimit = skill.getAffectLimit();
-			final var targets = new ArrayList<L2Object>();
+			final var targets = new LinkedList<L2Object>();
 			if (target.isPlayer()) {
 				final var targetPlayer = target.getActingPlayer();
 				final var clan = targetPlayer.getClan();
@@ -380,16 +379,12 @@ public enum AffectScope {
 			if (!target.isCharacter()) {
 				return List.of();
 			}
-			
 			final var affectLimit = skill.getAffectLimit();
-			final var affectObject = skill.getAffectObject();
-			final var creature = (L2Character) target;
 			return L2World.getInstance()
-				.getVisibleObjects(target, skill.getAffectRange())
-				.stream()
-				.filter(c -> affectObject.affectObject(creature, c))
+				.getVisibleObjectsStream(target, skill.getAffectRange(), true)
+				.filter(c -> skill.getAffectObject().affectObject(caster, c))
 				.limit(affectLimit > 0 ? affectLimit : Integer.MAX_VALUE)
-				.collect(Collectors.toList());
+				.toList();
 		}
 	},
 	/** Affects ranged targets, using selected target as point of origin. */
@@ -398,14 +393,13 @@ public enum AffectScope {
 		public List<L2Object> affectTargets(L2Character caster, L2Object target, Skill skill) {
 			final var affectLimit = skill.getAffectLimit();
 			return L2World.getInstance()
-				.getVisibleObjects(caster, target, skill.getAffectRange())
-				.stream()
+				.getVisibleObjectsStream(target, skill.getAffectRange(), false)
 				.filter(L2Object::isCharacter)
 				.map(o -> (L2Character) o)
 				.filter(c -> !c.isDead())
 				.filter(c -> skill.getAffectObject().affectObject(caster, c))
 				.limit(affectLimit > 0 ? affectLimit : Integer.MAX_VALUE)
-				.collect(Collectors.toList());
+				.collect(toList());
 		}
 	},
 	/** Affects ranged targets sorted by HP, using selected target as point of origin. */
@@ -414,14 +408,14 @@ public enum AffectScope {
 		public List<L2Object> affectTargets(L2Character caster, L2Object target, Skill skill) {
 			final var affectLimit = skill.getAffectLimit();
 			return L2World.getInstance()
-				.getVisibleObjects(caster, target, skill.getAffectRange())
-				.stream()
+				.getVisibleObjectsStream(target, skill.getAffectRange(), false)
 				.filter(L2Object::isCharacter)
 				.map(o -> (L2Character) o)
-				.filter(c -> !c.isDead())
-				.sorted(comparingDouble(c -> c.getCurrentHp() / c.getMaxHp()))
+				.filter(creature -> !creature.isDead())
+				.filter(creature -> skill.getAffectObject().affectObject(caster, creature))
+				.sorted(comparingDouble(creature -> creature.getCurrentHp() / creature.getMaxHp()))
 				.limit(affectLimit > 0 ? affectLimit : Integer.MAX_VALUE)
-				.collect(Collectors.toList());
+				.collect(toList());
 		}
 	},
 	/** Affects ranged targets, using selected target as point of origin. */
